# stripeify

./: .env.example  .gitignore  APPROVED_CARDS_LIST_FEATURE.md  AUTHORIZATION_DISCOVERY_WORKFLOW.md  BROWSER_COMMANDS.txt  BUILD_STATUS.md  CHANGELOG.md  COMMANDS.txt  COMPLETE_GAME_PLAN.md  CONTRIBUTING.md  Cargo.toml  DISCOVERY_INTEGRATION_STATUS.md  FINAL_SUMMARY.md  FIXES_APPLIED_FINAL.md  FULL_IMPLEMENTATION_PLAN.md  GATE_DISCOVERY_GUIDE.md  GATE_DISCOVERY_IMPLEMENTATION.md  LICENSE  PRODUCTION_SETUP_GUIDE.md  Proxies.txt  README.md  TELEGRAM_FORMAT_FINAL.md  THOROUGH_TEST_PLAN.md  USAGE.md  config.json  config_template.json  discovery_results.json  donation_gates.json  extracted.txt  full_test_cards.txt  full_test_gates.txt  gates.txt  log_batch_1.txt  log_batch_2.txt  production_gates.json  proxies.txt  quick_test_cards.txt  quick_test_gates.txt  quickgatetestinfo.txt  requirements.txt  (+19 more)
ShopifyGatesAndChunks/: chunk_000.txt  chunk_001.txt  chunk_002.txt  chunk_003.txt  chunk_004.txt  chunk_005.txt  chunk_006.txt  chunk_007.txt  chunk_008.txt  chunk_009.txt  chunk_010.txt  chunk_011.txt  chunk_012.txt  chunk_013.txt  chunk_014.txt  chunk_015.txt  chunk_016.txt  chunk_017.txt  chunk_018.txt  chunk_019.txt  chunk_020.txt  chunk_021.txt  chunk_022.txt  chunk_023.txt  chunk_024.txt  chunk_025.txt  chunk_026.txt  chunk_027.txt  chunk_028.txt  chunk_029.txt  chunk_030.txt  chunk_031.txt  chunk_032.txt  chunk_033.txt  chunk_034.txt  chunk_035.txt  chunk_036.txt  chunk_037.txt  chunk_038.txt  chunk_039.txt  (+35 more)
deprecated/: AUTHORIZATION_ONLY_GUIDE.md  AUTH_ONLY_TEST_RESULTS.md  AUTH_ONLY_USAGE.md  BETTER_GATE_FINDER.md  CARD_CHECKER_IMPROVEMENT.md  CHARGED_MODE_GUIDE.md  CHUNK_GATES_USAGE.md  CRITICAL_PATH_TEST_RESULTS.md  GATE_FINDER_IMPROVEMENTS.md  HTTP_403_FIX.md  PROJECT_STATUS.md  PROXY_FINAL_STATUS.md  PROXY_IMPLEMENTATION_COMPLETE.md  PROXY_IMPLEMENTATION_PLAN.md  PROXY_TEST_RESULTS.md  PROXY_USAGE_GUIDE.md  PROXY_VERIFICATION_COMPLETE.md  QUICK_REFERENCE.txt  README.md  ROTATING_PROXY_SETUP.md  SKIP_PRESCREEN_FIX.md  SMART_CARD_IMPLEMENTATION.md  SMART_TEST_STATUS.md  (+45 more)
(+100 files in other folders)
