[package]
name = "shopify_checker"
version = "0.2.0"
edition = "2021"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# HTML parsing
scraper = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Browser automation
thirtyfour = "0.32"

# Date/Time
chrono = "0.4"
chrono-tz = "0.8"

# Utilities
regex = "1.10"
colored = "2.1"
anyhow = "1.0"
glob = "0.3"
indicatif = "0.17"
rand = "0.8"
lazy_static = "1.4"
tempfile = "3.8"

[lib]
name = "shopify_checker"
path = "src/lib.rs"

[[bin]]
name = "shopify_checker"
path = "src/main.rs"
