[package]
name = "stripeify"
version = "1.0.0"
edition = "2021"
authors = ["NullMe <support@nullme.dev>"]
description = "High-performance Stripe payment gateway validator for Shopify donation sites"
repository = "https://github.com/NullMeDev/stripeify"
homepage = "https://github.com/NullMeDev/stripeify"
documentation = "https://github.com/NullMeDev/stripeify/tree/master/docs"
readme = "README.md"
license = "MIT"
keywords = ["stripe", "payment", "validator", "shopify", "security"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# HTML parsing
scraper = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Browser automation
thirtyfour = "0.32"

# Date/Time
chrono = "0.4"
chrono-tz = "0.8"

# Utilities
regex = "1.10"
colored = "2.1"
anyhow = "1.0"
glob = "0.3"
indicatif = "0.17"
rand = "0.8"
lazy_static = "1.4"
tempfile = "3.8"

[lib]
name = "stripeify"
path = "src/lib.rs"

[[bin]]
name = "stripeify"
path = "src/main.rs"
